Switch to sassc-rails with sass-embedded
Uses dart-sass underneath and integrates properly with the assets pipeline and sprockets, as opposed to dartsass-rails which seems to have problems.