@@ -134,7 +134,10 @@ project.ext.jrubyOptimizationJvmArgs = [
   '-XX:+TieredCompilation',
   '-XX:TieredStopAtLevel=1',
   '-Xss2048k',
-  '-client'
+  '-client',
+  // Enable native sub-process control by default, required on JDK 17+ and often needed by bundler and such to fork processes
+  '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+  '--add-opens=java.base/java.io=ALL-UNNAMED',
 ]
 
 project.ext.jrubyOptimizationSystemProperties = [
